Add untracked, optional local settings file. Ignore vscode junk that shows up when I'm working remotely from a tablet keyboard.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 sic/secret_settings.py
+sic/settings_local.py
 *.log
 *.pot
 *.pyc
@@ -17,3 +18,5 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+sic.db
+.vscode
