--- a/.pylintrc
+++ b/.pylintrc
@@ -152,7 +152,16 @@ disable=print-statement,
         xreadlines-attribute,
         deprecated-sys-function,
         exception-escape,
-        comprehension-escape
+        comprehension-escape,
+        missing-function-docstring,
+        missing-class-docstring,
+        line-too-long,
+        too-many-lines,
+        fixme,
+        missing-module-docstring,
+        bare-except,
+        broad-except,
+        import-outside-toplevel
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
