--- a/.pylintrc
+++ b/.pylintrc
@@ -161,7 +161,8 @@ disable=print-statement,
         missing-module-docstring,
         bare-except,
         broad-except,
-        import-outside-toplevel
+        import-outside-toplevel,
+        invalid-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
