tools/tag-input-wasm: autocomplete with Tab key

--- a/tools/tag-input-wasm/Makefile
+++ b/tools/tag-input-wasm/Makefile
@@ -4,5 +4,8 @@ all:
 release:
 	wasm-pack build --target web --release
 
-install:
+install: all
+	cp -iv pkg/tag_input_wasm_bg.wasm pkg/tag_input_wasm.js ../../sic/static
+
+install-release: release
 	cp -iv pkg/tag_input_wasm_bg.wasm pkg/tag_input_wasm.js ../../sic/static
